@@ -1,8 +1,6 @@
 package org.eclipse.pathfinder.api;
 
-import org.eclipse.pathfinder.internal.GraphDao;
-
-import jakarta.ejb.Stateless;
+import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.Size;
@@ -10,6 +8,9 @@ import jakarta.ws.rs.GET;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.QueryParam;
+
+import org.eclipse.pathfinder.internal.GraphDao;
+
 import java.security.SecureRandom;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
@@ -17,14 +18,22 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-@Stateless
+@RequestScoped
 @Path("/graph-traversal")
 public class GraphTraversalService {
 
     private static final long ONE_MIN_MS = 1000L * 60;
     private static final long ONE_DAY_MS = ONE_MIN_MS * 60 * 24;
     private final SecureRandom random = new SecureRandom();
-    @Inject private GraphDao dao;
+
+    private GraphDao dao;
+
+    public GraphTraversalService() {}
+
+    @Inject
+    public GraphTraversalService(GraphDao dao) {
+        this.dao = dao;
+    }
 
     @GET
     @Path("/shortest-path")
@@ -93,7 +102,7 @@ public class GraphTraversalService {
                                 toDate));
             }
 
-            String lastLegFrom = allVertices.get(allVertices.size() - 1);
+            String lastLegFrom = allVertices.getLast();
             fromDate = nextDate(date);
             toDate = nextDate(fromDate);
             transitEdges.add(
